# simple-text-communicator

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  Makefile  README.md  clang-format
.github/workflows/: ci_basic.yaml  ci_basic_server.yaml  pre-commit.yaml
app/: CMakeLists.txt
app/uTests/: CMakeLists.txt  DummyTest.cpp
app/uTests/dependency/: CMakeLists.txt
communicator/: CMakeLists.txt  LoginPage.qml  RegisterPage.qml  StartPage.qml  main-window.qml  main.cpp  main.qml  mainwindow.ui  resources.qrc
communicator/tests/: CMakeLists.txt  exampleTest.cpp
res/: diagram_uml  uml.plantuml  uml.txt
scripts/: clang-format.sh
server/: CMakeLists.txt  chatserver.cpp  chatserver.h  main.cpp
server/inc/: chatserver.h  message.h
server/src/: chatserver.cpp  main.cpp  message.cpp
